--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,4 +19,5 @@ tauri = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-opener = "2.5.3"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
+rusqlite = { version = "0.30", features = ["bundled"] }
+bcrypt = "0.15"
